--- a/LoL_UltimateBraveryTournament/Properties/Resources.resx
+++ b/LoL_UltimateBraveryTournament/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="MainMenu_ButtonImage_ChampionsListGenerator" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MainMenu_ButtonImage_ChampionsListGenerator.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="MainMenu_ButtonImage_StuffGenerator" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MainMenu_ButtonImage_StuffGenerator.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
